Saves a few lost lines of code due to an accident. The code is not completely runnable because of the expanding of the old_gen, which needs some patching on the gc classes. Therefore, this commit also serves as a milestone, before modifying the PSParallelCompact class, and its friends. This modification is a requirement due to the lack of knowledge by the GC that the space that is compacting is segmented into regions.